<resources>
    <string name="app_name">COUB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="electricmeter">Electric Meter</string>
    <string name="enter_current_counter_value">Enter the current counter value</string>
    <string name="save">Save</string>
    <string name="gasmeter">Gas Meter</string>
    <string name="watermeter">Water Meter</string>
    <string name="settings">Settings</string>
    <string name="enter_current_rate">Enter current rate</string>
    <string name="cancel">Cancel</string>
    <string name="the_current_readings_should_not_be_less_than_the_previous_ones">The current readings should not be less than the previous ones!</string>
    <string name="electricity_supply">Electricity supply</string>
    <string name="water_supply">Water supply</string>
    <string name="gas_supply">Gas supply</string>
    <string name="reports">Reports</string>
    <string name="rate_settings">Rate settings</string>
    <string name="previous_counter">Previous counter</string>
    <string name="electric_price">Electric price</string>
    <string name="water_price">Water price</string>
    <string name="gas_price">Gas price</string>
    <string name="clear_database">Clear database</string>
    <string name="report_for">Report for:</string>
    <string name="title">Meter</string>
    <string name="previous">Previous</string>
    <string name="current">Current</string>
    <string name="consumption">Consumption</string>
    <string name="payment">Payment</string>
    <string name="electric">Electric</string>
    <string name="water">Water</string>
    <string name="gas">Gas</string>
    <string name="select_month">Select month:</string>
    <string name="date">"Date: %1$s : "</string>
    <string name="data_not_found">Data not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_date">Enter date</string>
    <string name="selected_date" translatable="false">%1$d-%2$s-%3$d</string>
    <string name="current_date" translatable="false">%1$d-%2$s-%3$d</string>
    <string name="enter_counter_value">Enter counter value</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="juli">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="current_counter">Current counter</string>
    <string name="enter_previous_counter_value">Enter previous counter value</string>
    <string name="previous_meters_values">Previous counters values</string>
</resources>