<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/fon"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/previous_counter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edPrevCounter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/enter_previous_counter_value"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white200"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/current_counter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edCurrentCounter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/enter_current_counter_value"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white200"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSaveElectricMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        app:cornerRadius="5dp" />

</LinearLayout>