<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fon"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_counter"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edCounterValue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/enter_counter_value"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white200"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:cornerRadius="5dp" />

</LinearLayout>