<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:gravity="center"
        android:background="@drawable/fon"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="24sp"
            android:textColor="#FFFF0000"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnElectricScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electricity_supply"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnWaterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_supply"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnGasScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gas_supply"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnReportScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnSettingScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_settings"
            app:cornerRadius="5dp" />

<!--        <Button-->
<!--            android:id="@+id/btnPrevCountersValues"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/previous_meters_values"-->
<!--            app:cornerRadius="5dp" />-->


    </LinearLayout>

</FrameLayout>