<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fon"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:padding="8dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:text="@string/electric_price"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edElectricPrice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:autofillHints=""
            android:hint="@string/enter_current_tariff"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:text="@string/water_price"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edWaterPrice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:autofillHints=""
            android:hint="@string/enter_current_tariff"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:text="@string/gas_price"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edGasPrice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="24sp"
            android:autofillHints=""
            android:hint="@string/enter_current_tariff"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            app:cornerRadius="5dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/btnClearDb"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/clear_database"
            app:cornerRadius="5dp" />


    </LinearLayout>


</ScrollView>